# ts-demo

./: main.ipynb  main.py  pyproject.toml  pyrightconfig.json
data/: 2697765-uniswap_v3-1h.parquet
